planning/style.css
  * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
      font-family: monospace;
      font-size: 10px;
  }

  button,
  input {
      all: unset;
      text-align: center;
      padding-top: 15px;
      margin-bottom: 5px;
      min-width: 20px;
  }

  textarea {
      all: unset;
      width: 100%;
  }

  input,
  textarea {
      border-bottom: 1px solid rgb(189, 189, 189);
      color: rgb(79, 43, 223);
  }

  button {
      background-color: rgb(199, 199, 199);
      width: 30px;
      padding: 5px;
      padding-top: 15px;
      padding-bottom: 15px;
      margin-right: 5px;
      border-radius: 3px;
      font-weight: bold;
  }

  select {
      padding: 7px;
      color: rgb(79, 43, 223);
  }

  select,
  textarea,
  input {
      /* pour eviter que IOS zoom la page si < 16px  */
      font-size: 16px;
      border-radius: 3px;
  }

  hr {
      height: 1px;
      background-color: rgb(196, 196, 196);
      border: none;
  }

  .bigger {
      font-size: larger;
  }

  .bold {
      font-weight: bold;
  }

  .italic {
      font-style: italic;
  }

  .hidden {
      display: none;
  }

  .menu {
      margin-top: 3px;
      margin-bottom: 5px;
  }

  .three_month {
      display: flex;
  }

  .three_month>div {
      border: solid rgb(214, 214, 214) 1px;
      padding: 2px;
  }

  .gone {
      text-decoration: line-through;
      color: rgb(44, 44, 44);
  }

  .soon {
      background-color: rgb(226, 255, 182);
  }

  .strong {
      font-weight: bold;
      background-color: rgb(255, 255, 155);
  }

  .panel {
      position: fixed;
      bottom: 0px;
      left: 0px;
      width: 100%;
      background-color: rgb(229, 229, 229);
      padding: 3px;
  }

  .btn_edit {
      width: 30px;
      margin-right: 15px;
      margin-top: 5px;
  }

  #container {
      padding: 5px;
  }

  #current_week {
      height: 220px;
      overflow-y: scroll;
      border: solid 2px #e7e7e7;
  }

  #event_title {
      width: 100%;
      text-align: left;
  }

  #today {
      width: fit-content;
      background-color: rgb(198, 250, 255);
  }

  #select_events {
      max-width: 190px;
  }

  #event_details {
      margin-top: 2px;
      margin-bottom: 90px;
      padding: 5px;
      border: solid 1px #e7e7e7;
  }

  #events {
      height: 315px;
      overflow-y: scroll;
  }

  #events_search_title {
      text-align: left;
      width: 125px;
      margin-left: 3px;
  }

